--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,11 @@ pytest-asyncio = "0.25.3"
 faker = "30.8.2"
 mocker = "^1.1.1"
 moto = "5.1.1"
+sphinx = "^7.1.0"
+sphinx-rtd-theme = "^3.0.2"
+sphinx-autodoc-typehints = "^1.25.0"
+myst-parser = "^2.0.0"
+pre-commit = "^4.0.1"
 
 
 [tool.pytest.ini_options]
@@ -54,6 +59,60 @@ addopts = "-ra -q"
 testpaths = [
     "tests"
 ]
+
+
+[tool.black]
+line-length = 80
+target-version = ['py311']
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | build
+  | dist
+)/
+'''
+
+
+[tool.isort]
+profile = "black"
+line_length = 80
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+
+
+[tool.flake8]
+max-line-length = 88
+extend-ignore = ["E203", "W503", "E501"]
+exclude = [
+    ".git",
+    "__pycache__",
+    "build",
+    "dist",
+    ".eggs",
+    "*.egg",
+]
+
+
+[tool.bandit]
+exclude_dirs = ["tests"]
+skips = ["B101", "B601"]
+
+
+[tool.autoflake]
+remove-all-unused-imports = true
+remove-unused-variables = true
+remove-duplicate-keys = true
+ignore-init-module-imports = true
 
 
 [build-system]
