--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ pg8000 = "1.31.4"
 psycopg2-binary = "2.9.10"
 email-validator = "^2.0.0"
 google-cloud-logging = {version = "^3.8.0", optional = true}
+jinja2 = "^3.1.6"
 
 [tool.poetry.extras]
 gcloud = ["google-cloud-logging"]
