--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -42,6 +42,7 @@ jaraco-classes==3.4.0 ; python_version >= "3.11" and python_version < "4.0"
 jaraco-context==6.0.1 ; python_version >= "3.11" and python_version < "4.0"
 jaraco-functools==4.3.0 ; python_version >= "3.11" and python_version < "4.0"
 jeepney==0.9.0 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "linux"
+jinja2==3.1.6 ; python_version >= "3.11" and python_version < "4.0"
 jmespath==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
 keyring==25.7.0 ; python_version >= "3.11" and python_version < "4.0"
 librt==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -68,7 +69,7 @@ poetry==2.2.1 ; python_version >= "3.11" and python_version < "4.0"
 psycopg2-binary==2.9.10 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1==0.6.1 ; python_version >= "3.11" and python_version < "4.0"
 pycodestyle==2.14.0 ; python_version >= "3.11" and python_version < "4.0"
-pycparser==2.23 ; python_version >= "3.11" and python_version < "4.0" and implementation_name != "PyPy" and (sys_platform == "darwin" or platform_python_implementation != "PyPy")
+pycparser==2.23 ; python_version >= "3.11" and python_version < "4.0" and implementation_name != "PyPy" and (platform_python_implementation != "PyPy" or sys_platform == "darwin")
 pydantic-core==2.41.5 ; python_version >= "3.11" and python_version < "4.0"
 pydantic-settings==2.10.1 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.12.5 ; python_version >= "3.11" and python_version < "4.0"
