--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ httpcore==1.0.9 ; python_version >= "3.11" and python_version < "4.0"
 httpx==0.28.1 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.11 ; python_version >= "3.11" and python_version < "4.0"
 iniconfig==2.3.0 ; python_version >= "3.11" and python_version < "4.0"
+jinja2==3.1.6 ; python_version >= "3.11" and python_version < "4.0"
 jmespath==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==3.0.3 ; python_version >= "3.11" and python_version < "4.0"
 pg8000==1.31.4 ; python_version >= "3.11" and python_version < "4.0"
