--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -69,7 +69,7 @@ poetry==2.2.1 ; python_version >= "3.11" and python_version < "4.0"
 psycopg2-binary==2.9.10 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1==0.6.1 ; python_version >= "3.11" and python_version < "4.0"
 pycodestyle==2.14.0 ; python_version >= "3.11" and python_version < "4.0"
-pycparser==2.23 ; python_version >= "3.11" and python_version < "4.0" and implementation_name != "PyPy" and (platform_python_implementation != "PyPy" or sys_platform == "darwin")
+pycparser==2.23 ; python_version >= "3.11" and python_version < "4.0" and implementation_name != "PyPy" and (sys_platform == "darwin" or platform_python_implementation != "PyPy")
 pydantic-core==2.41.5 ; python_version >= "3.11" and python_version < "4.0"
 pydantic-settings==2.10.1 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.12.5 ; python_version >= "3.11" and python_version < "4.0"
