--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ psycopg2-binary = "2.9.10"
 email-validator = "^2.0.0"
 google-cloud-logging = {version = "^3.8.0", optional = true}
 jinja2 = "^3.1.6"
+boto3 = "^1.42.4"
 
 [tool.poetry.extras]
 gcloud = ["google-cloud-logging"]
