--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,6 +6,8 @@ autoflake==2.3.1 ; python_version >= "3.11" and python_version < "4.0"
 backports-tarfile==1.2.0 ; python_version == "3.11"
 bandit==1.9.2 ; python_version >= "3.11" and python_version < "4.0"
 black==25.11.0 ; python_version >= "3.11" and python_version < "4.0"
+boto3==1.42.4 ; python_version >= "3.11" and python_version < "4.0"
+botocore==1.42.4 ; python_version >= "3.11" and python_version < "4.0"
 build==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 cachecontrol==0.14.4 ; python_version >= "3.11" and python_version < "4.0"
 cachetools==6.2.2 ; python_version >= "3.11" and python_version < "4.0"
@@ -69,7 +71,7 @@ poetry==2.2.1 ; python_version >= "3.11" and python_version < "4.0"
 psycopg2-binary==2.9.10 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1==0.6.1 ; python_version >= "3.11" and python_version < "4.0"
 pycodestyle==2.14.0 ; python_version >= "3.11" and python_version < "4.0"
-pycparser==2.23 ; python_version >= "3.11" and python_version < "4.0" and implementation_name != "PyPy" and (sys_platform == "darwin" or platform_python_implementation != "PyPy")
+pycparser==2.23 ; python_version >= "3.11" and python_version < "4.0" and implementation_name != "PyPy" and (platform_python_implementation != "PyPy" or sys_platform == "darwin")
 pydantic-core==2.41.5 ; python_version >= "3.11" and python_version < "4.0"
 pydantic-settings==2.10.1 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.12.5 ; python_version >= "3.11" and python_version < "4.0"
@@ -95,6 +97,7 @@ requests==2.32.5 ; python_version >= "3.11" and python_version < "4.0"
 responses==0.25.8 ; python_version >= "3.11" and python_version < "4.0"
 rich==14.2.0 ; python_version >= "3.11" and python_version < "4.0"
 rsa==4.9.1 ; python_version >= "3.11" and python_version < "4.0"
+s3transfer==0.16.0 ; python_version >= "3.11" and python_version < "4.0"
 scramp==1.4.6 ; python_version >= "3.11" and python_version < "4.0"
 secretstorage==3.5.0 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "linux"
 shellingham==1.5.4 ; python_version >= "3.11" and python_version < "4.0"
