--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
 anyio==4.12.0 ; python_version >= "3.11" and python_version < "4.0"
 asn1crypto==1.5.1 ; python_version >= "3.11" and python_version < "4.0"
+boto3==1.42.4 ; python_version >= "3.11" and python_version < "4.0"
+botocore==1.42.4 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2025.11.12 ; python_version >= "3.11" and python_version < "4.0"
 cffi==2.0.0 ; python_version >= "3.11" and python_version < "4.0" and platform_python_implementation != "PyPy"
 charset-normalizer==3.4.4 ; python_version >= "3.11" and python_version < "4.0"
@@ -35,6 +37,7 @@ pyyaml==6.0.3 ; python_version >= "3.11" and python_version < "4.0"
 requests==2.32.5 ; python_version >= "3.11" and python_version < "4.0"
 responses==0.25.8 ; python_version >= "3.11" and python_version < "4.0"
 rsa==4.9.1 ; python_version >= "3.11" and python_version < "4.0"
+s3transfer==0.16.0 ; python_version >= "3.11" and python_version < "4.0"
 scramp==1.4.6 ; python_version >= "3.11" and python_version < "4.0"
 six==1.17.0 ; python_version >= "3.11" and python_version < "4.0"
 sqlalchemy==2.0.43 ; python_version >= "3.11" and python_version < "4.0"
