Refactor code for improved readability and maintainability; update logging and database URL formatting; enhance test descriptions and structure; apply autoflake for code cleanup

--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,7 @@ deps =
 skip_install = true
 commands =
     poetry install --with dev
-    autoflake app/ tests/
+    autoflake --in-place --remove-all-unused-imports --remove-unused-variables --recursive app/ tests/
     isort app/ tests/
     black app/ tests/
 
