--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ email-validator = "^2.0.0"
 google-cloud-logging = {version = "^3.8.0", optional = true}
 jinja2 = "^3.1.6"
 boto3 = "^1.42.4"
+cloudevents = "^1.12.0"
+functions-framework = "^3.10.0"
 
 [tool.poetry.extras]
 gcloud = ["google-cloud-logging"]
