--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,6 +6,7 @@ autoflake==2.3.1 ; python_version >= "3.11" and python_version < "4.0"
 backports-tarfile==1.2.0 ; python_version == "3.11"
 bandit==1.9.2 ; python_version >= "3.11" and python_version < "4.0"
 black==25.11.0 ; python_version >= "3.11" and python_version < "4.0"
+blinker==1.9.0 ; python_version >= "3.11" and python_version < "4.0"
 boto3==1.42.4 ; python_version >= "3.11" and python_version < "4.0"
 botocore==1.42.4 ; python_version >= "3.11" and python_version < "4.0"
 build==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -17,10 +18,12 @@ chardet==5.2.0 ; python_version >= "3.11" and python_version < "4.0"
 charset-normalizer==3.4.4 ; python_version >= "3.11" and python_version < "4.0"
 cleo==2.1.0 ; python_version >= "3.11" and python_version < "4.0"
 click==8.3.1 ; python_version >= "3.11" and python_version < "4.0"
+cloudevents==1.12.0 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0"
 coverage==7.12.0 ; python_version >= "3.11" and python_version < "4.0"
 crashtest==0.4.1 ; python_version >= "3.11" and python_version < "4.0"
 cryptography==46.0.3 ; python_version >= "3.11" and python_version < "4.0"
+deprecation==2.1.0 ; python_version >= "3.11" and python_version < "4.0"
 distlib==0.4.0 ; python_version >= "3.11" and python_version < "4.0"
 dnspython==2.8.0 ; python_version >= "3.11" and python_version < "4.0"
 dulwich==0.24.10 ; python_version >= "3.11" and python_version < "4.0"
@@ -31,7 +34,10 @@ fastjsonschema==2.21.2 ; python_version >= "3.11" and python_version < "4.0"
 filelock==3.20.0 ; python_version >= "3.11" and python_version < "4.0"
 findpython==0.7.1 ; python_version >= "3.11" and python_version < "4.0"
 flake8==7.3.0 ; python_version >= "3.11" and python_version < "4.0"
+flask==3.1.2 ; python_version >= "3.11" and python_version < "4.0"
+functions-framework==3.10.0 ; python_version >= "3.11" and python_version < "4.0"
 greenlet==3.3.0 ; python_version >= "3.11" and python_version < "4.0"
+gunicorn==23.0.0 ; python_version >= "3.11" and python_version < "4.0"
 h11==0.16.0 ; python_version >= "3.11" and python_version < "4.0"
 httpcore==1.0.9 ; python_version >= "3.11" and python_version < "4.0"
 httpx==0.28.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -40,6 +46,7 @@ importlib-metadata==8.7.0 ; python_version >= "3.11" and python_version < "4.0"
 iniconfig==2.3.0 ; python_version >= "3.11" and python_version < "4.0"
 installer==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
 isort==6.1.0 ; python_version >= "3.11" and python_version < "4.0"
+itsdangerous==2.2.0 ; python_version >= "3.11" and python_version < "4.0"
 jaraco-classes==3.4.0 ; python_version >= "3.11" and python_version < "4.0"
 jaraco-context==6.0.1 ; python_version >= "3.11" and python_version < "4.0"
 jaraco-functools==4.3.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -103,6 +110,7 @@ secretstorage==3.5.0 ; python_version >= "3.11" and python_version < "4.0" and s
 shellingham==1.5.4 ; python_version >= "3.11" and python_version < "4.0"
 six==1.17.0 ; python_version >= "3.11" and python_version < "4.0"
 sqlalchemy==2.0.43 ; python_version >= "3.11" and python_version < "4.0"
+starlette==0.50.0 ; python_version >= "3.11" and python_version < "4.0"
 stevedore==5.6.0 ; python_version >= "3.11" and python_version < "4.0"
 tomlkit==0.13.3 ; python_version >= "3.11" and python_version < "4.0"
 tox==4.32.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -114,7 +122,10 @@ typing-extensions==4.15.0 ; python_version >= "3.11" and python_version < "4.0"
 typing-inspection==0.4.2 ; python_version >= "3.11" and python_version < "4.0"
 tzdata==2025.2 ; python_version >= "3.11" and python_version < "4.0"
 urllib3==2.6.0 ; python_version >= "3.11" and python_version < "4.0"
+uvicorn-worker==0.4.0 ; python_version >= "3.11" and python_version < "4.0"
+uvicorn==0.38.0 ; python_version >= "3.11" and python_version < "4.0"
 virtualenv==20.35.4 ; python_version >= "3.11" and python_version < "4.0"
+watchdog==6.0.0 ; python_version >= "3.11" and python_version < "4.0"
 werkzeug==3.1.4 ; python_version >= "3.11" and python_version < "4.0"
 xattr==1.3.0 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "darwin"
 xmltodict==1.0.2 ; python_version >= "3.11" and python_version < "4.0"
