--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,34 @@
 annotated-types==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
 anyio==4.12.0 ; python_version >= "3.11" and python_version < "4.0"
 asn1crypto==1.5.1 ; python_version >= "3.11" and python_version < "4.0"
+blinker==1.9.0 ; python_version >= "3.11" and python_version < "4.0"
 boto3==1.42.4 ; python_version >= "3.11" and python_version < "4.0"
 botocore==1.42.4 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2025.11.12 ; python_version >= "3.11" and python_version < "4.0"
 cffi==2.0.0 ; python_version >= "3.11" and python_version < "4.0" and platform_python_implementation != "PyPy"
 charset-normalizer==3.4.4 ; python_version >= "3.11" and python_version < "4.0"
+click==8.3.1 ; python_version >= "3.11" and python_version < "4.0"
+cloudevents==1.12.0 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0"
 cryptography==46.0.3 ; python_version >= "3.11" and python_version < "4.0"
+deprecation==2.1.0 ; python_version >= "3.11" and python_version < "4.0"
 dnspython==2.8.0 ; python_version >= "3.11" and python_version < "4.0"
 ecdsa==0.19.1 ; python_version >= "3.11" and python_version < "4.0"
 email-validator==2.3.0 ; python_version >= "3.11" and python_version < "4.0"
+flask==3.1.2 ; python_version >= "3.11" and python_version < "4.0"
+functions-framework==3.10.0 ; python_version >= "3.11" and python_version < "4.0"
 greenlet==3.3.0 ; python_version >= "3.11" and python_version < "4.0"
+gunicorn==23.0.0 ; python_version >= "3.11" and python_version < "4.0"
 h11==0.16.0 ; python_version >= "3.11" and python_version < "4.0"
 httpcore==1.0.9 ; python_version >= "3.11" and python_version < "4.0"
 httpx==0.28.1 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.11 ; python_version >= "3.11" and python_version < "4.0"
 iniconfig==2.3.0 ; python_version >= "3.11" and python_version < "4.0"
+itsdangerous==2.2.0 ; python_version >= "3.11" and python_version < "4.0"
 jinja2==3.1.6 ; python_version >= "3.11" and python_version < "4.0"
 jmespath==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==3.0.3 ; python_version >= "3.11" and python_version < "4.0"
+packaging==25.0 ; python_version >= "3.11" and python_version < "4.0"
 pg8000==1.31.4 ; python_version >= "3.11" and python_version < "4.0"
 pluggy==1.6.0 ; python_version >= "3.11" and python_version < "4.0"
 psycopg2-binary==2.9.10 ; python_version >= "3.11" and python_version < "4.0"
@@ -41,8 +50,12 @@ s3transfer==0.16.0 ; python_version >= "3.11" and python_version < "4.0"
 scramp==1.4.6 ; python_version >= "3.11" and python_version < "4.0"
 six==1.17.0 ; python_version >= "3.11" and python_version < "4.0"
 sqlalchemy==2.0.43 ; python_version >= "3.11" and python_version < "4.0"
+starlette==0.50.0 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.15.0 ; python_version >= "3.11" and python_version < "4.0"
 typing-inspection==0.4.2 ; python_version >= "3.11" and python_version < "4.0"
 urllib3==2.6.0 ; python_version >= "3.11" and python_version < "4.0"
+uvicorn-worker==0.4.0 ; python_version >= "3.11" and python_version < "4.0"
+uvicorn==0.38.0 ; python_version >= "3.11" and python_version < "4.0"
+watchdog==6.0.0 ; python_version >= "3.11" and python_version < "4.0"
 werkzeug==3.1.4 ; python_version >= "3.11" and python_version < "4.0"
 xmltodict==1.0.2 ; python_version >= "3.11" and python_version < "4.0"
