--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,11 +1,35 @@
 # This file specifies files that are *not* uploaded to Google Cloud
 # using gcloud. It follows the same syntax as .gitignore, with the addition of
 # "#!include" directives (which are not supported by git).
-*
 
-# Allow main.py and required directories
-!main.py
-!requirements.txt
-!app/
-!config/
-!handlers/
+.git
+.gitignore
+__pycache__/
+*.pyc
+.venv/
+.tox/
+tests/
+storage/
+database/
+docs/
+.env
+.env.*
+.env.example
+.coverage
+.coveragerc
+tox.ini
+pytest.ini
+poetry.lock
+tinker.py
+.flake8
+.gcloudignore
+.pytest_cache
+.python-version
+pyproject.toml
+requirements-dev.txt
+.DS_Store
+.vscode/
+.idea/
+LICENSE
+README.md
+CHANGELOG.md
